Criei a função de edição de cadastros

--- a/telas/edita_cliente.html
+++ b/telas/edita_cliente.html
@@ -45,5 +45,7 @@
             </form>
         </section>
     </main>
+
+    <script type="module" src="../controller/atualizaCliente-controler.js"></script>
 </body>
 </html>
